--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,13 @@
     "@typescript-eslint/no-unsafe-call": 0,
     "@typescript-eslint/no-unsafe-member-access": 0,
     "@typescript-eslint/restrict-template-expressions": 0,
-    "react/require-default-props": 0
+    "react/require-default-props": 0,
+    "@typescript-eslint/no-use-before-define": 0,
+    "@typescript-eslint/no-unsafe-assignment": 0,
+    "@typescript-eslint/no-unsafe-argument": 0,
+    "@typescript-eslint/no-unsafe-return": 0,
+    "@typescript-eslint/no-shadow": 0,
+    "react/no-array-index-key": 0
   },
   "settings": {}
 }
